--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@vue/shared": "^3.0.0",
     "core-js": "^3.6.5",
     "flyio": "^0.6.2",
+    "node-sass": "^4.14.1",
     "regenerator-runtime": "^0.12.1",
     "uview-ui": "^1.8.4",
     "vue": "^2.6.11",
@@ -85,6 +86,7 @@
     "mini-types": "*",
     "miniprogram-api-typings": "*",
     "postcss-comment": "^2.0.0",
+    "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
   },
   "browserslist": [
